slurm_files/slurm-train-nn-gpu-608223.err
Traceback (most recent call last):
  File "/home/uni08/hpc/sun.qumeng/u11423/STEP/step/run.py", line 7, in <module>
    import torch
  File "/user/sun.qumeng/u11423/.conda/envs/step/lib/python3.9/site-packages/torch/__init__.py", line 1332, in <module>
    _C._initExtension(manager_path())
  File "/user/sun.qumeng/u11423/.conda/envs/step/lib/python3.9/site-packages/torch/cuda/__init__.py", line 51, in <module>
    import pynvml  # type: ignore[import]
  File "/cm/local/apps/cuda/libs/current/pynvml/pynvml.py", line 1671
    print c_count.value
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(c_count.value)?
